; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_rtlx.c_rtlx_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_rtlx.c_rtlx_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@MIPS_CPU_RTLX_IRQ = common dso_local global i32 0, align 4
@RTLX_CHANNELS = common dso_local global i32 0, align 4
@channel_wqs = common dso_local global %struct.TYPE_2__* null, align 8
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @rtlx_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtlx_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i64, i64* %6, align 8
  %9 = call i32 @local_irq_save(i64 %8)
  %10 = call i32 (...) @dvpe()
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* @MIPS_CPU_RTLX_IRQ, align 4
  %12 = shl i32 256, %11
  %13 = call i32 @set_c0_status(i32 %12)
  %14 = call i32 (...) @irq_enable_hazard()
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @evpe(i32 %15)
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @local_irq_restore(i64 %17)
  store i32 0, i32* %7, align 4
  br label %19

19:                                               ; preds = %36, %2
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @RTLX_CHANNELS, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %39

23:                                               ; preds = %19
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @channel_wqs, align 8
  %25 = load i32, i32* %7, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i64 %26
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = call i32 @wake_up(i32* %28)
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @channel_wqs, align 8
  %31 = load i32, i32* %7, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = call i32 @wake_up(i32* %34)
  br label %36

36:                                               ; preds = %23
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %7, align 4
  br label %19

39:                                               ; preds = %19
  %40 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %40
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @dvpe(...) #1

declare dso_local i32 @set_c0_status(i32) #1

declare dso_local i32 @irq_enable_hazard(...) #1

declare dso_local i32 @evpe(i32) #1

declare dso_local i32 @local_irq_restore(i64) #1

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
